# order-matching-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.ps1
benchmark/: CMakeLists.txt
benchmarks/: CMakeLists.txt  OrderBookBenchmark.cpp
data/: binance_downloader.py  synthetic_generator.py
scripts/: build.sh  run_benchmarks.ps1  run_benchmarks.sh  run_demo.ps1  run_tests.ps1
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  MatchingEngine.h  Order.h  OrderBook.cpp  OrderBook.h  Trade.h
src/implementations/: BTreeOrderBook.cpp  BTreeOrderBook.h  CMakeLists.txt  RBTreeOrderBook.cpp  RBTreeOrderBook.h
src/utils/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h  Timer.h
test/: test_order_matching.cpp
visualization/: index.html
visualization/data/: orderbook.json
visualization/server/: CMakeLists.txt
